--- a/.travis.yml
+++ b/.travis.yml
@@ -1,50 +1,59 @@
 ---
 sudo: false
+dist: trusty
 language: ruby
 cache: bundler
-dist: trusty
+before_install:
+  - bundle -v
+  - rm -f Gemfile.lock
+  - gem update --system
+  - gem --version
+  - bundle -v
+script:
+  - 'bundle exec rake $CHECK'
+bundler_args: --without system_tests
+rvm:
+  - 2.4.4
 env:
-  - PUPPET_VERSION="~> 4.10.0"
+  global:
+    - BEAKER_PUPPET_COLLECTION=puppet5 PUPPET_GEM_VERSION="~> 5.0"
 matrix:
+  fast_finish: true
   include:
-  - rvm: 2.1.9
-    bundler_args: --without system_tests release
-    env: PUPPET_VERSION="~> 4.0" CHECK=test_with_coveralls PARALLEL_TEST_PROCESSORS=12
-  - rvm: 2.4.3
-    bundler_args: --without system_tests release
-    env: PUPPET_VERSION="~> 4.0" CHECK=rubocop
-  - rvm: 2.4.3
-    bundler_args: --without system_tests release
-    env: PUPPET_VERSION="~> 4.0" CHECK=build DEPLOY_TO_FORGE=yes
-  - rvm: 2.4.3
-    bundler_args: --without release
-    dist: trusty
-    env: PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_set=docker/ubuntu-14.04 CHECK=beaker
-    services: docker
-    sudo: required
-  - rvm: 2.4.3
-    bundler_args: --without release
-    dist: trusty
-    env: PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_set=docker/ubuntu-16.04 CHECK=beaker
-    services: docker
-    sudo: required
-  - rvm: 2.4.3
-    bundler_args: --without release
-    dist: trusty
-    env: PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_set=docker/centos-7 CHECK=beaker
-    services: docker
-    sudo: required
+    -
+      dist: trusty
+      env: PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_PUPPET_COLLECTION=puppet5 BEAKER_set=docker/ubuntu-14.04 BEAKER_TESTMODE=apply
+      rvm: 2.4.4
+      script: bundle exec rake beaker
+      services: docker
+      sudo: required
+    -
+      dist: trusty
+      env: PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_PUPPET_COLLECTION=puppet5 BEAKER_set=docker/ubuntu-16.04 BEAKER_TESTMODE=apply
+      rvm: 2.4.4
+      script: bundle exec rake beaker
+      services: docker
+      sudo: required
+    -
+      dist: trusty
+      env: PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_PUPPET_COLLECTION=puppet5 BEAKER_set=docker/centos-7 BEAKER_TESTMODE=apply
+      rvm: 2.4.4
+      script: bundle exec rake beaker
+      services: docker
+      sudo: required
+    -
+      env: CHECK="syntax lint metadata_lint check:symlinks check:git_ignore check:dot_underscore check:test_file rubocop"
+    -
+      env: CHECK=parallel_spec
+    -
+      env: PUPPET_GEM_VERSION="~> 4.0" CHECK=parallel_spec
+      rvm: 2.1.9
 branches:
   only:
-  - master
-  - /^v\d/
+    - master 
+    - /^v\d/ 
 notifications:
   email: false
-  irc:
-    on_success: always
-    on_failure: always
-    channels:
-      - "chat.freenode.org#voxpupuli-notifications"
 deploy:
   provider: puppetforge
   user: puppet
@@ -52,7 +61,5 @@ deploy:
     secure: "cQdjbcwx+q/ArSkOtnxMYmlsWnJmyNEz7IUmpSx3F/z1ntX75/J3mJYFgYuvrOw2IbmmuwgVPofBpJjJajkhGOpaywOjKA6PgxKzSEu6e/q5CXJwMLnsDhHqY6X9bdGF5TU/DUkNzxBQlI7uDyk3yBVAACzLGMTCFksoztdlIbI="
   on:
     tags: true
-    # all_branches is required to use tags
     all_branches: true
-    # Only publish the build marked with "DEPLOY_TO_FORGE"
     condition: "$DEPLOY_TO_FORGE = yes"
